--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Lien vers le fichier style bootstrap -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <!-- Lien vers le fichier icones bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <title>Document</title>
 </head>
+
+
 <body>
-    <header>Le menu</header>
+    <header>Le menu </header>
 
     <main id="main-page">
         <!-- Le contenu de ma page sera injecté ici -->
     </main>
     <footer>Le footer de mon site
-    <script type="module" src="../Router/router.js"></script>    
+
+        <!-- Lien pour le routage front end javascript -->
+    <script type="module" src="../Router/router.js"></script>
+
+        <!-- Lien javascript de bootstrap -->    
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>    
 </body>
 </html>
