--- a/index.html
+++ b/index.html
@@ -15,7 +15,38 @@
 
 
 <body>
-    <header>Le menu </header>
+    <header>
+        <!--Ajout de la navbar bootstrap responsive lg est le breakpoint -->
+        <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Arcadia</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link"  href="/">Accueil</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Habitats</a>
+                  </li>
+                  
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
+                  </li>
+                  <li class="nav-item"></li>
+                    <a class="nav-link" href="#">Contact</a>
+                  </li>
+                  <li class="nav-item"></li>
+                    <a class="nav-link" href="#">Connexion/Deconnexion</a>
+                  </li>
+                </ul>
+               
+              </div>
+            </div>
+          </nav>
+    </header>
 
     <main id="main-page">
         <!-- Le contenu de ma page sera injecté ici -->
