realisation page d'accueil

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,3 +1,13 @@
-<h1>Bienvenue sur le site du zoo Arcadia</h1>
+<div class="vitrine text-center text-white">
+    <div class="vitrine-content">
+            <h1>Bienvenue au zoo Arcadia</h1>   
+    
+    </div>
+</div>
+<p>Situé en Bretagne , non loin de la légendaire forêt de Brocéliande, notre zoo accueille depuis 1960
+    tout un panel d’animaux répartis en différents habitats.
+   Plongez au cœur de la nature et vivez une expérience unique.
+    Notre zoo, entièrement autosuffisant en énergie,
+     vous invite à découvrir la faune dans un environnement respectueux. Ensemble, préservons notre biodiversité.</p>
 
-<button class="btn btn-primary">Coucou</button>
+
