ajout page habitats

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,13 +1,15 @@
-<div class="vitrine text-center text-white">
-    <div class="vitrine-content">
-            <h1>Bienvenue au zoo Arcadia</h1>   
-    
-    </div>
+<div class="vitrine text-center text-dark">
+
+    <h1>Bienvenue au zoo Arcadia</h1>
+
+    <img src="../assets/photos/lions1.png" class="img-fluid" alt="photo lions">
+
+    <p>Situé en Bretagne , non loin de la légendaire forêt de Brocéliande, notre zoo accueille depuis 1960
+        tout un panel d’animaux répartis en différents habitats.
+        Plongez au cœur de la nature et vivez une expérience unique.
+        Notre zoo, entièrement autosuffisant en énergie,
+        vous invite à découvrir la faune dans un environnement respectueux. Ensemble, préservons notre biodiversité.</p>
 </div>
-<p>Situé en Bretagne , non loin de la légendaire forêt de Brocéliande, notre zoo accueille depuis 1960
-    tout un panel d’animaux répartis en différents habitats.
-   Plongez au cœur de la nature et vivez une expérience unique.
-    Notre zoo, entièrement autosuffisant en énergie,
-     vous invite à découvrir la faune dans un environnement respectueux. Ensemble, préservons notre biodiversité.</p>
+
 
 
