--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link"  href="/">Accueil</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Habitats</a>
+                    <a class="nav-link" href="/habitats">Habitats</a>
                   </li>
                   
                   <li class="nav-item">
