ajout page signin

--- a/pages/habitats.html
+++ b/pages/habitats.html
@@ -1,11 +1,8 @@
-<div class="vitrine text-center text-dark">
-
-    <h1>Nos habitats</h1>
-
-    <img src="../assets/photos/zoo.jpeg" class="img-fluid" alt="photo lions">
-
-    
-</div>
+<div class="hero-scene text-center text-white ">
+    <div class="hero-scene-content  ">
+        <p>Nos habitats</p>
+    </div>
+    </div>
 
 <div class="container">
     <div class="row row-cols-1 row-cols-lg-3">
