--- a/pages/home.html
+++ b/pages/home.html
@@ -1,9 +1,10 @@
 <div class="vitrine text-center text-dark">
 
-    <h1>Bienvenue au zoo Arcadia</h1>
-
-    <img src="../assets/photos/lions1.png" class="img-fluid" alt="photo lions">
-
+    <div class="hero-scene text-center text-white ">
+        <div class="hero-scene-content  ">
+            <p>Bienvenue à ARCADIA</p>
+        </div>
+        </div>
     <p>Situé en Bretagne , non loin de la légendaire forêt de Brocéliande, notre zoo accueille depuis 1960
         tout un panel d’animaux répartis en différents habitats.
         Plongez au cœur de la nature et vivez une expérience unique.
