--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                   </li>
                   
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="/services">Services</a>
                   </li>
                   <li class="nav-item"></li>
                     <a class="nav-link" href="#">Contact</a>
                   </li>
                   <li class="nav-item"></li>
-                    <a class="nav-link" href="#">Connexion/Deconnexion</a>
+                    <a class="nav-link" href="/signin">Connexion</a>
                   </li>
                 </ul>
                
