ajout section contact

--- a/pages/services.html
+++ b/pages/services.html
@@ -1,5 +1,5 @@
 <div class="hero-scene text-center text-white ">
     <div class="hero-scene-content  ">
-        <p>Bienvenue à ARCADIA</p>
+        <p>Nos services</p>
     </div>
     </div>
