--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="/services">Services</a>
                   </li>
                   <li class="nav-item"></li>
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="/contact">Contact</a>
                   </li>
                   <li class="nav-item"></li>
                     <a class="nav-link" href="/signin">Connexion</a>
