amelioration sécurité formulaires

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,17 +10,26 @@
         <div class="mb-3">
             <label for="TitreInput" class="form-label">Titre</label>
             <input type="text" class="form-control" id="TitreInput" placeholder="Titre de votre demande.">
+            <div class="invalid-feedback">
+            Un titre est requis!
+          </div>
           </div>
         <div class="mb-3">
           <label for="EmailInput" class="form-label">Email</label>
           <input type="email" class="form-control" id="EmailInput" placeholder="exemple@mail.fr" >
+          <div class="invalid-feedback">
+            Le mail n'est pas au bon format!
+          </div>
         </div>
         <div class="mb-3">
             <label for="DescriptionInput" class="form-label">Description</label>
             <textarea class="form-control" id="DescriptionInput" rows="3" placeholder="Ecrivez votre demande ici."></textarea>
+            <div class="invalid-feedback">
+            Un texte est requis!
+          </div>
           </div>
         
-        <button type="submit" class="btn btn-primary">Envoyer</button>
+        <button type="submit" class="btn btn-primary" id="btn-validation-contact">Envoyer</button>
       </form>
 </div>
    
