ajout securisation methode de connexion

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
        
     </footer>
-
+    <script src="js/script.js"></script>
         <!-- Lien pour le routage front end javascript -->
     <script type="module" src="../Router/router.js"></script>
 
