--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
                   <li class="nav-item">
                     <a class="nav-link" href="/services">Services</a>
                   </li>
-                  <li class="nav-item"></li>
+                  <li class="nav-item">
                     <a class="nav-link" href="/contact">Contact</a>
                   </li>
-                  <li class="nav-item"></li>
+                  <li class="nav-item" data-show="disconnected">
                     <a class="nav-link" href="/signin">Connexion</a>
+                  </li>
+                  <li class="nav-item" data-show="connected">
+                  <button class="nav-link" id="signout-btn">Déconnexion</button>
                   </li>
                 </ul>
                
